# ProFolio

./: .env.example  .gitattributes  .gitignore  README.md  backend_error_logs.txt  backend_logs.txt  backend_logs_ascii.txt  cl_logs.txt  docker-compose.yml  log.txt  logs.txt  package-lock.json  parsed_logs.txt  project_index.md  rules.md  test_flattened_job.py  test_get_job.py  test_job_scan.py  test_list_jobs.py  tracked_files.tmp
backend/: .flake8  Dockerfile  alembic.ini  fix_tests.py  pyproject.toml  requirements-dev.txt  requirements.txt  seed_resume.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  001_create_users_and_job_preferences.py  (+5 more)
backend/app/: __init__.py  config.py  database.py  init_db.py  inject_mock_job.py  main.py
backend/tests/: __init__.py  conftest.py  test_adzuna_client.py  test_auth_endpoints.py  test_auth_full_flow.py  test_auth_middleware.py  test_benchmark_router.py  test_benchmark_sanitizer.py  test_benchmark_service.py  test_cv_optimizer.py  test_cv_optimizer_e2e.py  test_cv_optimizer_service.py  test_cv_profiler.py  test_cv_profiler_edge_cases.py  test_feedback_service.py  test_file_processing.py  test_health.py  test_idor_jobs.py  test_interview_coach.py  test_interview_coach_service.py  test_job_models.py  test_job_scanner.py  test_job_schemas.py  test_job_service.py  test_jobs_router.py  test_migrations.py  test_pdf_export.py  test_peer_data.py  test_prompt_cache.py  test_recommendations_service.py  test_resume_service.py  test_seed_peers.py  test_task_manager.py  test_tech_extractor.py  test_token_guard.py
(+112 files in other folders)
